Fix header z-index

--- a/app/assets/stylesheets/_header.css.scss
+++ b/app/assets/stylesheets/_header.css.scss
@@ -25,7 +25,7 @@
 
   .top-bar {
     margin-bottom: 0px !important;
-    z-index: 99999;
+    z-index: 9;
     a {
       margin-right: 10px;
       font-size: 15px !important;
